--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DomZnaniy2020">
-        <activity android:name=".ActivityResult"></activity>
+        <activity android:name=".HistoryActivity"></activity>
+        <activity android:name=".ActivityResultForMath" />
+        <activity android:name=".ActivityResultForRus" />
         <activity android:name=".MathActivity" />
         <activity android:name=".RusActivity" />
         <activity android:name=".TestActivity" />
